--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Hitchens
-email: hello@patdryburgh.com
+title: "BookLab: Print to Programming"
+email: rcordell@illinois.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  An inarguably well-designed Jekyll theme.
-baseurl: "/hitchens" # the subpath of your site, e.g. /blog
-url: "https://patdryburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-icon: /assets/images/icon-512.png
-twitter_username: patdryburgh
-github_username:  patdryburgh
+An applied, comparative history of new media from the hand-press period to the present in the School of Information Sciences at the University of Illinois Urbana-Champaign.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://s22bl.ryancordell.org" # the base hostname & protocol for your site, e.g. http://example.com
+icon: /assets/images/lighttype512.png
+twitter_username: ryancordell
+github_username:  rccordell
 
 # Build settings
 markdown: kramdown
