--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: "BookLab: Print to Programming"
 email: rcordell@illinois.edu
 description: An applied, comparative history of new media from the hand-press period to the present in the School of Information Sciences at the University of Illinois Urbana-Champaign.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://s22bl.ryancordell.org" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" 
+url: "https://s22bl.ryancordell.org" 
 icon: /assets/images/lighttype512.png
 twitter_username: ryancordell
 github_username:  rccordell
