--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,11 @@
 - title: Syllabus
+  url: /syllabus.html
+
+- title: Syllabus PDF
   url: /assets/Cordell-BookLab-Syllabus.pdf
+
+- title: Schedule
+  url: /schedule.html
 
 - title: Source
   url: https://github.com/rccordell/s22bl
