update schedule and separate assignments from syllabus

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,8 @@
 - title: Syllabus
   url: /syllabus.html
+  
+- title: Assignments
+  url: /assignments.html
 
 - title: Schedule
   url: /schedule.html
